# act

./: .gitignore  PHASE_CONDITIONING_README.md  UV_GUIDE.md  action_space_statistics.py  constants.py  imitate_episodes.py  phase_wrapped_policy.py  policy.py  preprocess_canonical_actions.py  pyproject.toml  run_phase_detection.py  run_phase_detection.sh  utils.py  visualize_action_space_umap.py  visualize_phase_results.py
detr/: main.py  pyproject.toml
detr/models/: detr_vae.py  transformer.py
phasetoolkit/: __init__.py  api.py  config.py  features.py  gaussianization.py  reconstruction.py
phasetoolkit/core/: __init__.py  hmm.py  phase_stats.py  reconstruction.py  tracker.py
