[project]
name = "detr"
version = "0.0.0"
description = "DETR model definitions for ACT"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
